--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                     <li>
                         <h3 class="title">IT Developer Front-End | Freelance</h3>
-                        <p class="period">jan 2023 - jun 2023</p>
+                        <p class="period">jan 2021 - dez 2022</p>
                         <p>
                             Build screens, mockups, landing pages.
                         </p>
