--- a/index.html
+++ b/index.html
@@ -15,37 +15,38 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
 
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/header.css">
-    <link rel="stylesheet" href="/assets/css/acordeon.css">
-    <link rel="stylesheet" href="/assets/css/languages.css">
-    <link rel="stylesheet" href="/assets/css/portfolio.css">
-    <link rel="stylesheet" href="/assets/css/experience.css">
-    <link rel="stylesheet" href="/assets/css/skills.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/acordeon.css">
+    <link rel="stylesheet" href="assets/css/languages.css">
+    <link rel="stylesheet" href="assets/css/portfolio.css">
+    <link rel="stylesheet" href="assets/css/experience.css">
+    <link rel="stylesheet" href="assets/css/skills.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 
 <body>
     <main class="main">
         <header class="header">
-            <img src="/assets/img/my-photo.jpg" alt="profile picture" class="photo">
+            <img src="assets/img/my-photo.png" alt="Foto de Perfil" class="photo" id="profile.photo">
 
             <h1 class="title">
-                Hello, <br>I'm Daniel Pereira
+                Olá, <br>eu sou <span id="profile.name">Carregando...</span>
             </h1>
 
             <div class="information">
-                <p class="job">Software Developer Full Stack</p>
-                <p class="location">São Paulo - BR</p>
+                <p class="job" id="profile.job">Carregando...</p>
+                <p class="location" id="profile.location">Carregando...</p>
                 <p class="phone">
-                    <a href="tel: +55 (11) 9 9999-9999">+55 (11) 9 5280-8185</a>
+                    <a href="tel:(16) 9 9999-9999" id="profile.phone">Carregando...</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:ex@mail.com">pdaniel643@gmail.com</a>
+                    <a href="mailto:ex@mail.com" id="profile.email">carregando@mail.com</a>
                 </p>
             </div>
         </header>
 
-        <section class="acordeon open">
+        <section class="acordeon">
             <button class="trigger" type="button">
                 <h2>Skills</h2>
             </button>
@@ -54,30 +55,16 @@
                 <div class="skills">
                     <section class="tools">
                         <h3>Ferramentas:</h3>
-                        <ul>
-                            <li>
-                                <img src="/assets/img/icons/tools/nodejs.svg" alt="Nodejs" title="Nodejs">
-                            </li>
-                            <li>
-                                <img src="/assets/img/icons/tools/react.svg" alt="React" title="React">
-                            </li>
-                            <li>
-                                <img src="/assets/img/icons/tools/git.svg" alt="GIT" title="GIT">
-                            </li>
-                            <li>
-                                <img src="/assets/img/icons/tools/java.svg" alt="Java" title="Java">
-                            </li>
+                        <ul id="profile.skills.hardSkills">
                         </ul>
                     </section>
 
                     <section class="personal">
-                        <h3>Guys:</h3>
-                        <ul>
-                            <li>Leadership</li>
-                            <li>Ease of communication</li>
-                            <li>Organization</li>
-                            <li>Team work</li>
-                            <li>Flexibility</li>
+                        <h3>Pessoal:</h3>
+                        <ul id="profile.skills.softSkills">
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
                         </ul>
                     </section>
                 </div>
@@ -86,14 +73,12 @@
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Languages</h2>
+                <h2>Idiomas</h2>
             </button>
 
             <div class="content">
-                <ul class="languages">
-                    <li>Portuguese Brazil (fluent)</li>
-                    <li>English (basic)</li>
-                    <li>Spanish (basic)</li>
+                <ul class="languages" id="profile.languages">
+                    <li>Carregando...</li>
                 </ul>
             </div>
         </section>
@@ -104,61 +89,32 @@
             </button>
 
             <div class="content">
-                <ul class="portfolio">
-                    <li>
-                        <h3 class="title github">Creating a Reminder App</h3>
-                        <a href="https://www.google.com.br" target="_blank">www.google.com.br</a>
-                    </li>
-                    <li>
-                        <h3 class="title github">Creating a Reminder App</h3>
-                        <a href="https://www.google.com.br" target="_blank">www.google.com.br</a>
-                    </li>
-                    <li>
-                        <h3 class="title">Creating a Reminder App</h3>
-                        <a href="https://www.google.com.br" target="_blank">www.google.com.br</a>
-                    </li>
+                <ul class="portfolio" id="profile.portfolio">
                 </ul>
             </div>
         </section>
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Professional experience</h2>
+                <h2>Experiência Profissional</h2>
             </button>
 
             <div class="content">
-                <ul class="experience">
-                    <li>
-                        <h3 class="title">Software Developer Full Stack Java | Freelance </h3>
-                        <p class="period">jun 2023 - Current</p>
-                        <br>
-                        Deal with the use of MySQL and PostgreSQL databases, also working with the use of queries depending on the </br> customization desired by the client.
-                        </br>- Participate in meetings and schedule meetings to present new projects to the client, in the best possible way.
-                        </br>- Build screens, mockups and class diagrams for better organization, development and representation of the system.
-                        </p>
-                    </li>
-
-                    <li>
-                        <h3 class="title">Java Software Developer | F1RST Digital Services</h3>
-                        <p class="period">jan 2023 - jun 2023</p>
-                        <p>
-                            Maintenance and creation of spring boot applications, in the support part.
-                        </p>
-                    </li>
-
-                    <li>
-                        <h3 class="title">IT Developer Front-End | Freelance</h3>
-                        <p class="period">jan 2021 - dez 2022</p>
-                        <p>
-                            Build screens, mockups, landing pages.
-                        </p>
-                    </li>
+                <ul class="experience" id="profile.professionalExperience">
                 </ul>
             </div>
         </section>
+
+        <footer>
+            <a href="https://www.dio.me/" target="_blank">
+                <img src="assets/img/dio.svg" alt="DIO">
+            </a>
+        </footer>
     </main>
 
-    <script src="/assets/js/acordeon.js"></script>
+    <script src="assets/js/acordeon.js"></script>
+    <script src="assets/js/api.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
