--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -28,20 +28,20 @@
 <body>
     <main class="main">
         <header class="header">
-            <img src="assets/img/my-photo.png" alt="Foto de Perfil" class="photo" id="profile.photo">
+            <img src="assets/img/my-photo.png" alt="Profile picture" class="photo" id="profile.photo">
 
             <h1 class="title">
-                Olá, <br>eu sou <span id="profile.name">Carregando...</span>
+                Hello,  <br>I am <span id="profile.name">Loading...</span>
             </h1>
 
             <div class="information">
-                <p class="job" id="profile.job">Carregando...</p>
-                <p class="location" id="profile.location">Carregando...</p>
+                <p class="job" id="profile.job">Loading...</p>
+                <p class="location" id="profile.location">Loading...</p>
                 <p class="phone">
-                    <a href="tel:(16) 9 9999-9999" id="profile.phone">Carregando...</a>
+                    <a href="tel:(16) 9 9999-9999" id="profile.phone">Loading...</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:ex@mail.com" id="profile.email">carregando@mail.com</a>
+                    <a href="mailto:ex@mail.com" id="profile.email">Loading@mail.com</a>
                 </p>
             </div>
         </header>
@@ -54,17 +54,17 @@
             <div class="content">
                 <div class="skills">
                     <section class="tools">
-                        <h3>Ferramentas:</h3>
+                        <h3>Tools:</h3>
                         <ul id="profile.skills.hardSkills">
                         </ul>
                     </section>
 
                     <section class="personal">
-                        <h3>Pessoal:</h3>
+                        <h3>Guys:</h3>
                         <ul id="profile.skills.softSkills">
-                            <li>Carregando...</li>
-                            <li>Carregando...</li>
-                            <li>Carregando...</li>
+                            <li>Loading...</li>
+                            <li>Loading...</li>
+                            <li>Loading...</li>
                         </ul>
                     </section>
                 </div>
@@ -73,12 +73,12 @@
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Idiomas</h2>
+                <h2>Languages</h2>
             </button>
 
             <div class="content">
                 <ul class="languages" id="profile.languages">
-                    <li>Carregando...</li>
+                    <li>Loading...</li>
                 </ul>
             </div>
         </section>
@@ -96,7 +96,7 @@
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Experiência Profissional</h2>
+                <h2>Professional experience</h2>
             </button>
 
             <div class="content">
@@ -104,12 +104,6 @@
                 </ul>
             </div>
         </section>
-
-        <footer>
-            <a href="https://www.dio.me/" target="_blank">
-                <img src="assets/img/dio.svg" alt="DIO">
-            </a>
-        </footer>
     </main>
 
     <script src="assets/js/acordeon.js"></script>
